--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+/* Fonts */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 @tailwind base;
@@ -5,31 +8,196 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    /* Theme colors */
+    --color0:#47484d;
+    --color1:#c0ca67;
+    --color2:#1d684a;
+    --color3:#284e51;
+    --color4:#0d838d;
+    --color5:#d7d8d0;
+
+    /* Swiper slide colors */
+    --swiper-navigation-color: #47484d;
+
+    /* Organization Structure colors */
+    --level-1: #8dccad;
+    --level-2: #F9E8B2;
+    --level-3: #7b9fe0;
+    --level-4: #FADBD8;
+    --black: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+        to bottom,
+        transparent,
+        rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* @layer utilities {
+    .text-balance {
+        text-wrap: balance;
+    }
+} */
+
+section {
+    /* */
+}
+
+section .container {
+    min-height: 100vh;
+    background: #F5F5F5;
+    box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
+    -webkit-box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
+    -moz-box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
+    padding: 2rem;
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    height: auto;
+    width: 100%;
+    background: #1d684a;
+}
+
+footer .top {
+    color: white;
+    font-size: 0.875rem;
+    margin: 0 auto;
+}
+
+.footer-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footer-col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-self: flex-start;
+}
+
+.footer-col.footer-menu {
+    padding: 1.25rem 0;
+}
+
+.footer-col.footer-menu ul {
+    font-size: 0.8rem;
+    font-weight: 200;
+    line-height: 1rem;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-col.footer-menu li {
+    margin: 4px 0;
+    list-style: none;
+    text-align: left;
+}
+
+.footer-col.footer-menu li a:hover {
+    color: var(--color0);
+}
+
+.footer-col.footer-menu h2 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+.footer-col.footer-menu ul.footer-address li:first-child {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.25rem;
+}
+
+.footer-col.footer-menu:first-child,
+.footer-col.footer-menu:nth-child(2) {
+    width: calc(100%/5);
+}
+
+.footer-col.footer-policy {
+    width: 70%;
+    padding: 0;
+    /* border: 1px solid red; */
+}
+
+.footer-col.footer-policy .standard-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.25rem;
+    padding: 0;
+    /* border: 1px solid red; */
+}
+
+.footer-col.footer-policy .standard-logo {
+    padding: 0;
+    border-radius: 0.375rem;
+    overflow: hidden;
+}
+
+.footer-col.footer-policy .policy-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.25rem;
+    margin-top: 0.5rem;
+}
+
+.footer-col.footer-policy .policy-wrapper a { font-size: 0.75rem; }
+.footer-col.footer-policy .policy-wrapper a:hover { color: var(--color0); }
+.footer-col.footer-policy .policy-wrapper a:first-child { margin-right: 0.25rem;}
+.footer-col.footer-policy .policy-wrapper a:nth-child(2) { margin: 0 0.25rem;}
+.footer-col.footer-policy .policy-wrapper a:last-child { margin-left: 0.25rem;}
+
+.footer-col.footer-stat {
+    width: 30%;
+    /* border: 1px solid red; */
+}
+
+footer .top > div {
+    position: relative;
+}
+
+footer .bottom {
+    background: var(--color0);
+}
+
+footer div:first-child {
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+footer a { margin-left: 0.25rem; }
+
+.social-icons {
+    display: flex;
+    gap: 1rem;
+    margin-top: 0.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
+.social-icons a {
+    color: #fff;
+    transition: transform 200ms;
+}
+
+.social-icons a:hover {
+    color: var(--color0);
+    transform: translateY(-5px);
 }
