--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,17 +49,17 @@ body {
     }
 } */
 
-section {
-    /* */
-}
-
-section .container {
+.wrapper .container {
     min-height: 100vh;
     background: #F5F5F5;
     box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
     -webkit-box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
     -moz-box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
     padding: 2rem;
+}
+
+section {
+    background: #F5F5F5;
 }
 
 footer {
@@ -200,4 +200,9 @@ footer a { margin-left: 0.25rem; }
 .social-icons a:hover {
     color: var(--color0);
     transform: translateY(-5px);
+}
+
+/* Swiper */
+.swiper-slide {
+    /*  */
 }
