--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,13 +43,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-/* @layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
-} */
-
-.wrapper .container {
+.wrapper > .container {
     min-height: 100vh;
     background: #F5F5F5;
     box-shadow: 0px 5px 20px 0px rgba(168,168,168,0.6);
@@ -59,7 +53,7 @@ body {
 }
 
 section {
-    background: #F5F5F5;
+    /* code here */
 }
 
 footer {
@@ -202,7 +196,11 @@ footer a { margin-left: 0.25rem; }
     transform: translateY(-5px);
 }
 
+.hero {
+    height: calc(100vh - 60px);
+}
+
 /* Swiper */
-.swiper-slide {
+.swiper {
     /*  */
 }
